// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Contained button renders correctly 1`] = `
<div>
  <button
    class="button button_variant_contained button_color_undefined"
    tabindex="0"
    type="button"
  >
    contained
  </button>
</div>
`;

exports[`Disabled button renders correctly 1`] = `
<div>
  <button
    class="button button_variant_Disabled button_color_undefined"
    tabindex="0"
    type="button"
  >
    Disabled
  </button>
</div>
`;

exports[`Outlined button renders correctly 1`] = `
<div>
  <button
    class="button button_variant_outlined button_color_undefined"
    tabindex="0"
    type="button"
  >
    outlined
  </button>
</div>
`;

exports[`Success button renders correctly 1`] = `
<div>
  <button
    class="button button_variant_contained button_color_success"
    tabindex="0"
    type="button"
  >
    Success
  </button>
</div>
`;
